stryker/Metadata/unpackaged/objects/Top_10_Scorers__c.object
<CustomObject>
    <fields>
        <fullName>Matches__c</fullName>
        <label>Matches</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player_Name__c</fullName>
        <label>Player Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Team__c</fullName>
        <label>Player Team</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Top 10 Scorers</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Top 10 Scorers Names</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top 10 Scorers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>